charts/kubectl/development.yaml
apiVersion: apps/v1
kind: "Deployment"
metadata:
  name: "kupping-frontend"
  namespace: "default"
  labels:
    app: "kupping-frontend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "kupping-frontend"
  template:
    metadata: 
      labels:
        app: "kupping-frontend"
    spec:
      containers:
      - name: "frontend"
        image: eu.gcr.io/k3s-tests/kupping/frontend
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
