charts/kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kupping-frontend
  name: kupping-frontend-service
  namespace: default
spec:
  ports:
  - port: 80
    name: http-nginx
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https-nginx
    protocol: TCP
    targetPort: 443
  selector:
    app: kupping-frontend
  type: ClusterIP
